--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
             grid-template-columns: 1fr 1fr 1fr 1fr;
             gap: 12px;
         }
+        .class-list a{
+            text-decoration: none;
+            padding: 8px 24px;
+        }
         .class-list button{
             text-decoration: none;
-            padding: 8px 10px;
+            border: none;
+            background: none;
+            margin: 5px 0px 5px 0px;
         }
         .primary-button {
             background-color: var(--hospital-green);
@@ -66,19 +72,19 @@
             <h1 class="title">Project page links</h1>
         </div>
         <div class="class-list">
-            <button class="primary-button" href="login.html">Login</button>
-            <button class="primary-button" href="home1.html">Home</button>
-            <button class="primary-button" href="create_account.html">Create account</button>
-            <button class="primary-button" href="menu2Mobile.html">Menu mobile</button>
-            <button class="primary-button" href="menuOrder.html">Menu order</button>
-            <button class="primary-button" href="my_account.html">My account</button>
-            <button class="primary-button" href="navbar.html">Navbar</button>
-            <button class="primary-button" href="newPassword.html">New password</button>
-            <button class="primary-button" href="password_recovery2.html">Password recovery</button>
-            <button class="primary-button" href="product_details.html">Product details</button>
-            <button class="primary-button" href="shopping_cart1.html">my orders</button>
-            <button class="primary-button" href="shopping_cart2.html">Shopping cart</button>
-            <button class="primary-button" href="sing_outDeskstop.html">Sign out</button>
+            <button><a class="primary-button" href="/login.html">Login</a></button>
+            <button><a class="primary-button" href="/home1.html">Home</a></button>
+            <button><a class="primary-button" href="/create_account.html">Create account</a></button>
+            <button><a class="primary-button" href="/menu2Mobile.html">Menu mobile</a></button>
+            <button><a class="primary-button" href="/menuOrder.html">Menu order</a></button>
+            <button><a class="primary-button" href="/my_account.html">My account</a></button>
+            <button><a class="primary-button" href="/navbar.html">Navbar</a></button>
+            <button><a class="primary-button" href="/newPassword.html">New password</a></button>
+            <button><a class="primary-button" href="/password_recovery2.html">Password recovery</a></button>
+            <button><a class="primary-button" href="/product_details.html">Product details</a></button>
+            <button><a class="primary-button" href="/shopping_cart1.html">my orders</a></button>
+            <button><a class="primary-button" href="/shopping_cart2.html">Shopping cart</a></button>
+            <button><a class="primary-button" href="/sing_outDeskstop.html">Sign out</a></button>
         </div>
 
     </div>
