--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
             <h1 class="title">Project page links</h1>
         </div>
         <div class="class-list">
-            <button><a class="primary-button" href="login.html">Login</a></button>
-            <button><a class="primary-button" href="home1.html">Home</a></button>
-            <button><a class="primary-button" href="create_account.html">Create account</a></button>
-            <button><a class="primary-button" href="menu2Mobile.html">Menu mobile</a></button>
-            <button><a class="primary-button" href="menuOrder.html">Menu order</a></button>
-            <button><a class="primary-button" href="my_account.html">My account</a></button>
-            <button><a class="primary-button" href="navbar.html">Navbar</a></button>
-            <button><a class="primary-button" href="newPassword.html">New password</a></button>
-            <button><a class="primary-button" href="password_recovery2.html">Password recovery</a></button>
-            <button><a class="primary-button" href="product_details.html">Product details</a></button>
-            <button><a class="primary-button" href="shopping_cart1.html">my orders</a></button>
-            <button><a class="primary-button" href="shopping_cart2.html">Shopping cart</a></button>
-            <button><a class="primary-button" href="sing_outDeskstop.html">Sign out</a></button>
+            <button><a class="primary-button" href="frontendProject1/login.html">Login</a></button>
+            <button><a class="primary-button" href="frontendProject1/home1.html">Home</a></button>
+            <button><a class="primary-button" href="frontendProject1/create_account.html">Create account</a></button>
+            <button><a class="primary-button" href="frontendProject1/menu2Mobile.html">Menu mobile</a></button>
+            <button><a class="primary-button" href="frontendProject1/menuOrder.html">Menu order</a></button>
+            <button><a class="primary-button" href="frontendProject1/my_account.html">My account</a></button>
+            <button><a class="primary-button" href="frontendProject1/navbar.html">Navbar</a></button>
+            <button><a class="primary-button" href="frontendProject1/newPassword.html">New password</a></button>
+            <button><a class="primary-button" href="frontendProject1/password_recovery2.html">Password recovery</a></button>
+            <button><a class="primary-button" href="frontendProject1/product_details.html">Product details</a></button>
+            <button><a class="primary-button" href="frontendProject1/shopping_cart1.html">my orders</a></button>
+            <button><a class="primary-button" href="frontendProject1/shopping_cart2.html">Shopping cart</a></button>
+            <button><a class="primary-button" href="frontendProject1/sing_outDeskstop.html">Sign out</a></button>
         </div>
 
     </div>
