--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <button><a class="primary-button" href="./product_details.html">Product details</a></button>
             <button><a class="primary-button" href="./shopping_cart1.html">my orders</a></button>
             <button><a class="primary-button" href="./shopping_cart2.html">Shopping cart</a></button>
-            <button><a class="primary-button" href="./sing_outDeskstop.html">Sign out</a></button>
+            <button><a class="primary-button" href="./sign_outDeskstop.html">Sign out</a></button>
         </div>
 
     </div>
